// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopoverOpacity snapshots should render PopoverOpacity 1`] = `
<DocumentFragment>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="0"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="opacity"
      height="12"
      name="Opacity"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Fixed opacity (100)
    </small>
  </div>
</DocumentFragment>
`;

exports[`PopoverOpacity snapshots should render with mixed value 1`] = `
<DocumentFragment>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="0"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="opacity"
      height="12"
      name="Opacity"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Fixed opacity (100)
    </small>
  </div>
</DocumentFragment>
`;
